--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,26 +2,26 @@
   "workbench.colorCustomizations": {
     "iLoveWorkSpaceColors": true,
     "iLoveWorkSpaceRandom": false,
-    "activityBar.activeBackground": "#65c89b",
-    "activityBar.background": "#65c89b",
+    "activityBar.activeBackground": "#93e6fc",
+    "activityBar.background": "#93e6fc",
     "activityBar.foreground": "#15202b",
     "activityBar.inactiveForeground": "#15202b99",
-    "activityBarBadge.background": "#945bc4",
-    "activityBarBadge.foreground": "#e7e7e7",
+    "activityBarBadge.background": "#fa45d4",
+    "activityBarBadge.foreground": "#15202b",
     "commandCenter.border": "#15202b99",
-    "sash.hoverBorder": "#65c89b",
-    "statusBar.background": "#42b883",
-    "statusBar.debuggingBackground": "#b84277",
-    "statusBar.debuggingForeground": "#e7e7e7",
+    "sash.hoverBorder": "#93e6fc",
+    "statusBar.background": "#61dafb",
+    "statusBar.debuggingBackground": "#fb8261",
+    "statusBar.debuggingForeground": "#15202b",
     "statusBar.foreground": "#15202b",
-    "statusBarItem.hoverBackground": "#359268",
-    "statusBarItem.remoteBackground": "#42b883",
+    "statusBarItem.hoverBackground": "#2fcefa",
+    "statusBarItem.remoteBackground": "#61dafb",
     "statusBarItem.remoteForeground": "#15202b",
-    "tab.activeBorder": "#65c89b",
-    "titleBar.activeBackground": "#42b883",
+    "tab.activeBorder": "#93e6fc",
+    "titleBar.activeBackground": "#61dafb",
     "titleBar.activeForeground": "#15202b",
-    "titleBar.inactiveBackground": "#42b88399",
+    "titleBar.inactiveBackground": "#61dafb99",
     "titleBar.inactiveForeground": "#15202b99"
   },
-  "peacock.color": "#42b883"
+  "peacock.color": "#61dafb"
 }
