--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "production_module_new",
   "version": "1.0.0",
+  "description": "production_module_new",
+  "type": "module",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
+    "test": "jest",
     "build:start": "cd dist && PORT=3002 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
@@ -19,16 +22,29 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@testing-library/dom": "^10.3.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
+    "@types/node": "^20.14.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@types/testing-library__jest-dom": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.16.0",
+    "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.3.0",
     "css-loader": "^6.11.0",
     "dotenv-webpack": "^8.0.1",
+    "eslint": "^9.6.0",
+    "eslint-plugin-react": "^7.34.3",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "file-loader": "^6.2.0",
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
     "html-webpack-plugin": "^5.3.2",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "json-loader": "^0.5.7",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.3.0",
@@ -42,14 +58,18 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@testing-library/user-event": "^14.5.2",
+    "babel-jest": "^29.7.0",
     "formik": "^2.4.6",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "redux": "^5.0.1",
+    "tailwind-merge": "^2.4.0",
     "vodo-icons": "^1.0.3",
-    "vodo-react-components": "^1.6.2"
+    "vodo-react-components": "^1.6.7",
+    "yup": "^1.4.0"
   }
 }
