--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "production_module_new",
   "version": "1.0.0",
   "description": "production_module_new",
-  "type": "module",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "build": "webpack --mode production",
     "build:dev": "webpack --mode development",
-    "test": "jest",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "build:start": "cd dist && PORT=3002 npx serve",
     "start": "webpack serve --open --mode development",
     "start:live": "webpack serve --open --mode development --live-reload --hot"
@@ -17,22 +19,24 @@
     "email": "jherr@pobox.com"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.8",
-    "@babel/plugin-transform-runtime": "^7.15.8",
+    "@babel/core": "^7.24.9",
+    "@babel/plugin-transform-runtime": "^7.24.7",
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
+    "@jest/globals": "^29.7.0",
     "@testing-library/dom": "^10.3.2",
-    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
-    "@types/node": "^20.14.10",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@types/testing-library__jest-dom": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^7.16.0",
     "@typescript-eslint/parser": "^7.16.0",
     "autoprefixer": "^10.1.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^8.3.0",
     "css-loader": "^6.11.0",
     "dotenv-webpack": "^8.0.1",
@@ -43,7 +47,6 @@
     "fs-extra": "^11.2.0",
     "glob": "^11.0.0",
     "html-webpack-plugin": "^5.3.2",
-    "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "json-loader": "^0.5.7",
     "postcss": "^8.2.1",
@@ -51,6 +54,7 @@
     "style-loader": "^3.3.4",
     "svg-loader": "^0.0.2",
     "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.2.2",
     "typescript": "^4.5.2",
     "webpack": "^5.57.1",
     "webpack-cli": "^4.10.0",
@@ -58,9 +62,9 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
-    "@testing-library/user-event": "^14.5.2",
-    "babel-jest": "^29.7.0",
     "formik": "^2.4.6",
+    "jest": "^29.7.0",
+    "jest-worker": "^29.7.0",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -69,7 +73,7 @@
     "redux": "^5.0.1",
     "tailwind-merge": "^2.4.0",
     "vodo-icons": "^1.0.3",
-    "vodo-react-components": "^1.6.7",
+    "vodo-react-components": "^1.7.1",
     "yup": "^1.4.0"
   }
 }
