--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^16.18.98",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -62,9 +63,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@types/uuid": "^10.0.0",
     "formik": "^2.4.6",
     "jest": "^29.7.0",
     "jest-worker": "^29.7.0",
+    "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -72,8 +76,9 @@
     "react-router-dom": "^6.24.1",
     "redux": "^5.0.1",
     "tailwind-merge": "^2.4.0",
+    "uuid": "^10.0.0",
     "vodo-icons": "^1.0.3",
-    "vodo-react-components": "^1.8.3",
+    "vodo-react-components": "^1.9.2",
     "yup": "^1.4.0"
   }
 }
