--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.24.7",
     "@jest/globals": "^29.7.0",
+    "@tanstack/eslint-plugin-query": "^5.51.12",
     "@testing-library/dom": "^10.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^16.0.0",
@@ -63,8 +64,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
+    "@tanstack/react-query": "^5.51.11",
+    "@tanstack/react-query-devtools": "^5.51.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/uuid": "^10.0.0",
     "formik": "^2.4.6",
+    "i18next": "^23.12.2",
+    "i18next-browser-languagedetector": "^8.0.0",
     "jest": "^29.7.0",
     "jest-worker": "^29.7.0",
     "js-cookie": "^3.0.5",
@@ -78,7 +84,7 @@
     "tailwind-merge": "^2.4.0",
     "uuid": "^10.0.0",
     "vodo-icons": "^1.0.3",
-    "vodo-react-components": "^1.9.2",
+    "vodo-react-components": "^1.9.4",
     "yup": "^1.4.0"
   }
 }
